--- a/virtualWorkforce/static/ngTemplates/app.virtualWorkforce.default.html
+++ b/virtualWorkforce/static/ngTemplates/app.virtualWorkforce.default.html
@@ -71,22 +71,22 @@
     <div class="col-md-4">
       <div class="flex-container">
         <div style="min-height:28vh;position: relative;">
-          <div style="position: absolute;left: 0;right: 0;bottom: 50%;text-align: center;font-size: 1em;">
+          <div style="position: absolute;left: 0;right: 0;bottom: 30%;text-align: center;font-size: 1em;">
             70%
           </div>
-          <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels" height='100em' style="margin-top: 20px;">
+          <canvas id="myChart"  height='100em' style="margin-top: 20px;">
           </canvas>
-          <div style="background-color: #1DA381;height:30px;width:50%;margin-left:4em;position:absolute;" class="text-center">
+          <div style="background-color: #1DA381;height:30px;width:52%;margin-left:3.8em;position:absolute;margin-top:20px;" class="text-center">
             <p style="font-size: 0.5em;color:#fff;line-height: 30px;font-weight:bold;">Lead-to-Opportunity Ratio</p>
           </div>
         </div>
         <div style="min-height:28vh;position: relative;">
-          <div style="position: absolute;left: 0;right: 0;bottom: 50%;text-align: center;font-size: 1em;">
+          <div style="position: absolute;left: 0;right: 0;bottom: 30%;text-align: center;font-size: 1em;">
             30%
           </div>
-          <canvas id="doughnut" class="chart chart-doughnut" chart-data="data1" chart-labels="labels1" height='100em' style="margin-top: 20px;">
+          <canvas id="myChart1"  height='100em' style="margin-top: 20px;">
           </canvas>
-          <div style="background-color: #1DA381;height:30px;width:50%;margin-left:4em;position:absolute;" class="text-center">
+          <div style="background-color: #1DA381;height:30px;width:52%;margin-left:3.8em;position:absolute;margin-top:20px;" class="text-center">
             <p style="font-size: 0.5em;color:#fff;line-height: 30px;font-weight:bold;">Opportunity-to-win Ratio</p>
           </div>
         </div>
