--- a/performance/static/ngTemplates/app.performance.dash.html
+++ b/performance/static/ngTemplates/app.performance.dash.html
@@ -3,40 +3,67 @@
     <breadcrumb></breadcrumb>
 
     <div class="row">
-      <div class="col-md-4 text-center firstrow" >
-         <h3>OEE</h3>
-         <span>85%</span>
-         <div class="caret1 text-center"><span>3%</span></div>
+      <div class="col-md-4  firstrow">
+        <h3 style="font-weight:700;color:#706961;text-align:center;">OEE</h3>
+        <p>85%</p>
+        <div class="carets text-left"><span>3%</span></div>
+        <div class="col-md-offset-4 col-md-8 line">
+          <canvas id="line-chart" height="70"></canvas>
+        </div>
       </div>
-      <div class="col-md-4">
-
+      <div class="col-md-4 firstrow">
+        <h3 style="font-weight:700;color:#706961;text-align:center;">Past Due WIP Jobs</h3>
+        <p>1%</p>
+        <div class="carets-down text-left"><span>-1%</span></div>
+        <div class="col-md-offset-4 col-md-8 line">
+          <canvas id="line-chart1" height="70"></canvas>
+        </div>
       </div>
-      <div class="col-md-4">
-
+      <div class="col-md-4 firstrow">
+        <h3 style="font-weight:700;color:#706961;text-align:center;">Inventory Turns</h3>
+        <p>9</p>
+        <div class="carets text-left"><span>2%</span></div>
+        <div class="col-md-offset-4 col-md-8 line">
+          <canvas id="line-chart2" height="70"></canvas>
+        </div>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-md-4">
-
+      <div class="col-md-4 firstrow">
+        <div class="header">
+          <p>performance Summary On-time vs Scrap</p>
+        </div>
       </div>
-      <div class="col-md-4">
-
+      <div class="col-md-4 firstrow">
+        <div class="header">
+          <p>Jobs on Time Weekly Trend</p>
+        </div>
       </div>
-      <div class="col-md-4">
-
+      <div class="col-md-4 firstrow">
+        <div class="header">
+          <p>Inventory Finished Goods by Loaction</p>
+        </div>
+        <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels">
+        </canvas>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-md-4">
-
+      <div class="col-md-4 firstrow">
+        <div class="header">
+          <p>Production Scrap by Top 10 Part Type</p>
+        </div>
       </div>
-      <div class="col-md-4">
-
+      <div class="col-md-4 firstrow">
+        <div class="header">
+          <p>Jobs by Status</p>
+        </div>
       </div>
-      <div class="col-md-4">
-
+      <div class="col-md-4 firstrow">
+        <div class="header">
+          <p>Container Loactions</p>
+        </div>
       </div>
     </div>
 
