--- a/support/static/ngTemplates/app.projects.service.view.html
+++ b/support/static/ngTemplates/app.projects.service.view.html
@@ -478,6 +478,7 @@
 </div>
 <div ng-controller="businessManagement.projects.approval.view">
   <div class="container-fluid" style="padding:20px;" ng-if="form.status=='sent_for_approval'">
+    {{form.status}}
     <div class="col-md-3" style="border-right:solid 2px #eeeeee;min-height:80vh;">
       <div class="row">
         <div class="col-md-12">
