--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -1,28 +1,28 @@
 <div class="animated fadeIn" id="chatBox">
-  <div style="min-height:84vh;margin-top:0px;padding:0px;border-left: 1px solid #eeeeee; border-right: 1px solid #eeeeee; background-color: white;border-bottom:2px solid #eeeeee " class="container-fluid">
-    <div class="container-fluid" style="padding:0px;border-bottom:1px solid #eeeeee;height:115px;">
-      <div class="row" style="padding:0px;">
+  <div style="min-height:83vh;margin-top:0px;padding:0px;border-left: 1px solid #eeeeee; border-right: 1px solid #eeeeee; background-color: white;border-bottom:2px solid #eeeeee " class="container-fluid">
+    <div class="container-fluid" style="padding:0px;border-bottom:1px solid #eeeeee;height:95px;">
+      <div class="row" style="padding:2px;border-bottom:1px dotted grey;margin:0px;background-color:#eee">
         <div class="col-md-12">
           <div class="col-md-3" style="padding:0px">
-            <div class="btn btn-primary btn-sm btn-block" style="border-radius:0px !important;" type="button" name="button" ng-click="knowledgeBase(data.companyPk)"><i class="fa fa-book" style="font-size:35px;" aria-hidden="true"></i>
+            <div class="btn btn-sm btn-block" style="border-radius:0px !important;" type="button" name="button" ng-click="knowledgeBase(data.companyPk)"><i class="fa fa-book" style="font-size:20px;" aria-hidden="true"></i>
             </div>
           </div>
           <div class="col-md-3" style="padding:0px">
-            <div class="btn btn-warning btn-sm btn-block" type="button" style="border-radius:0px !important;padding:5px 0px" name="button" mwl-confirm title="Transfer Chat" message="Are you sure?" data-placement="bottom" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="chatTransfer(data.uid,data.chatThreadPk)"
-              confirm-button-type="default" cancel-button-type="default"><i style="font-size:30px" class="fa fa-user-o" aria-hidden="true"></i>
-              <i style="font-size:16px" class="fa fa-exchange" aria-hidden="true"></i>
-              <i style="font-size:35px" class="fa fa-user" aria-hidden="true"></i>
+            <div class="btn btn-sm btn-block" type="button" style="border-radius:0px !important;padding:5px 0px" name="button" mwl-confirm title="Transfer Chat" message="Are you sure?" data-placement="bottom" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="chatTransfer(data.uid,data.chatThreadPk)"
+              confirm-button-type="default" cancel-button-type="default"><i style="font-size:15px" class="fa fa-user-o" aria-hidden="true"></i>
+              <i style="font-size:12px" class="fa fa-exchange" aria-hidden="true"></i>
+              <i style="font-size:17px" class="fa fa-user" aria-hidden="true"></i>
             </div>
           </div>
           <div class="col-md-3" style="padding:0px">
-            <div class="btn btn-danger btn-sm btn-block" type="button" style="border-radius:0px !important;" name="button" mwl-confirm title="Close Chat" message="Are you sure?" data-placement="bottom" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="chatClose(index,data.uid,data.chatThreadPk);closed=true"
+            <div class="btn btn-sm btn-block" type="button" style="border-radius:0px !important;" name="button" mwl-confirm title="Close Chat" message="Are you sure?" data-placement="bottom" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="chatClose(index,data.uid,data.chatThreadPk);closed=true"
               confirm-button-type="default" cancel-button-type="default" ng-hide="closed">
-              <img style="width:35px;border-radius:10px" src="/static/images/close_chat.png">
+              <img style="width:20px;border-radius:10px" src="/static/images/close_chat.png">
             </div>
             <span ng-if="closed" style="font-size:18px;color:red">Chat Closed</span>
           </div>
-          <div class="col-md-3" style="padding:0px;font-size:33px;text-align:center;background-color:green">
-            <i class="fa fa-pencil " style="cursor:pointer;text-align:center;color:white" aria-hidden="true" ng-click="editUserDetails(data.uid)" title="Edit Details"></i>
+          <div class="col-md-3" style="padding:0px;font-size:20px;text-align:center">
+            <i class="fa fa-pencil " style="cursor:pointer;color:black" aria-hidden="true" ng-click="editUserDetails(data.uid)" title="Edit Details"></i>
           </div>
         </div>
       </div>
@@ -39,12 +39,7 @@
           </div>
         </div>
         <div class="col-md-2">
-          <div class="row">
-            <i class="fa fa-times pull-right " aria-hidden="true" style="cursor:pointer; font-size:20px; padding-right:10px;" ng-click="closeChatBox(index)"></i>
-          </div>
-          <!-- <div class="row" style="padding-top:10px;">
-            <i class="fa fa-pencil fa-lg  pull-right" style="cursor:pointer; padding-right:10px;" aria-hidden="true" ng-click="editUserDetails(data.uid)" title="Edit Details"></i>
-          </div> -->
+            <i class="fa fa-times pull-right " aria-hidden="true" style="cursor:pointer; font-size:20px; padding:4px 5px;" ng-click="closeChatBox(index)"></i>
         </div>
       </div>
     </div>
@@ -67,7 +62,7 @@
       <iframe id="iframeChat{{data.uid}}" ng-src="{{data.audioUrl | trusted}}" scrolling="no" style="height:100%; width:100%; border:1px solid #e0e0e0;"></iframe>
     </div>
 
-    <div class="container-fluid" id="scrollArea{{data.uid}}" style="margin-left:10px; height:{{msgDivHeight}}vh; overflow-y:auto; overflow-x:hidden;">
+    <div class="container-fluid" id="scrollArea{{data.uid}}" style="margin-left:10px;padding-top: 5px; height:{{msgDivHeight}}vh; overflow-y:auto; overflow-x:hidden;">
       <div class="row" style="padding:0px;" ng-repeat="message in data.messages track by $index">
 
         <div ng-if="!message.logs" class="row container-fluid" style="{{message.sentByAgent ? 'padding-right:30px' : 'padding-left:30px'}};">
