--- a/static_shared/ngTemplates/sideMenu.html
+++ b/static_shared/ngTemplates/sideMenu.html
@@ -1,5 +1,4 @@
 <div class="" ng-controller="sideMenu" style="background: linear-gradient(245deg, #e5e5e6 0%, #fff 51%, #fff 75%);height:100vh">
-  <!-- {{sideMenuVisibility}} -->
   <div ng-if="sideMenuVisibility" class="row" style="margin:0px;">
     <div class="container-fluid" style="background-image: url('https://png.pngtree.com/thumb_back/fw800/back_pic/03/95/04/5757eb8d28d1012.jpg');background-size: cover;padding:20px;padding-bottom:30px;padding-left:40px;">
       <div class="row" style="display:flex;flex-direction:column;justify-content:center;align-items:center">
@@ -8,14 +7,6 @@
       </div>
     </div>
   </div>
-  <!-- <div ng-if="!sideMenuVisibility" style="margin:0px;">
-      <div class="row" style="padding:15px; margin-left:10px; margin-top:40px;" >
-          <img ng-src="{{user.pk | getDP}}" class="img img-circle pull-left" style="width:50px;">
-      </div>
-      <div class="row text-center">
-        <span style="font-size:12px; padding-left:5px;">{{user.pk | getName}}</span>
-      </div>
-  </div> -->
   <div ng-if="!sideMenuVisibility" class="row" style="{{mobileView ? ';':'width:30%;'}};padding:15px;text-align:center">
     <img ng-src="{{user.pk | getDP}}" class="img img-circle" style="width:50px;float: none;">
   </div>
@@ -31,24 +22,16 @@
 
   <div class="row">
     <div class="container-fluid">
-      <ul class="nav nav-sidebar padded" style="width:100%;">
+      <ul class="nav nav-sidebar" style="width:100%;">
         <li ng-class="{active: $state.includes(a.state)}" ng-repeat="a in apps" ng-mouseover="onHover=true" ng-mouseleave="onHover=false">
-          <a ui-sref="{{a.state}}" style="{{ onHover&&!sideMenuVisibility ? 'width:255%;border-radius:0 30px 30px 0' : ''}}">
+          <a ui-sref="{{a.state}}" style="{{ onHover&&!sideMenuVisibility ? 'width:250%;border-radius:0 30px 30px 0' : ''}}">
             <div ng-if="sideMenuVisibility" align="left">
               <div class="row container-fluid" >
-                <div style="display:flex;padding:0px 1.5rem">
-                  <i style="padding-top:4px;font-size:1.333333em" class="fa {{a.icon}} fa-lg"></i>
-                  <span style="padding-left:10px">{{a.dispName | humanize}}</span>
+                <div style="display:flex;padding-left:1rem">
+                  <i style="padding:4px 0px;font-size:1.333333em" class="fa {{a.icon}} fa-lg"></i>
+                  <span style="padding-left:5px">{{a.dispName | humanize}}</span>
                 </div>
               </div>
-              <!-- <div class="row container-fluid">
-                <div class="col-md-3">
-                  <i class="fa {{a.icon}} fa-lg"></i>
-                </div>
-                <div class="col-md-9">
-                  <p class="pull-right">{{a.dispName | humanize}}</p>
-                </div>
-              </div> -->
             </div>
             <div ng-if="!sideMenuVisibility" align="left" style="padding-bottom:15px;overflow-x:visible;"><i class="fa {{a.icon}} fa-lg pull-left zoomOnHover" style="margin-left:15px;padding-top:4px"></i>
               <span ng-if="onHover" class="pull-right">{{a.dispName | humanize}}</span>
