--- a/ecommerce/static/ngTemplates/app.ecommerce.account.topMenu.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.account.topMenu.html
@@ -1,38 +1,32 @@
-<div class="row" style="width:100%; border:0px;background-color:var(--themeColor)">
-  <div class="col-xs-12" >
-    <h5 style="color: white;padding-left:10px">  <i class="fa fa-user fa-2x"></i>
-     Accounts</h5>
-  </div>
-</div>
-<div class="row" style="width:100%;height:15vh;border-top:0px;background-color:var(--themeColor)">
+<div class="row text-center" style="width:100%;height:70px;border-top:0px;padding-top:28px;background-color:var(--themeColor)">
   <div class="col-xs-2 col-xs-offset-1 text-center" ng-click="$state.go('account.cart')" ng-class="{activeTopTabAcnt: $state.is('account.cart')}" style="cursor:pointer;">
-    <div class="row" style="padding-bottom:10px;color: white;">
+    <!-- <div class="row" style="padding-bottom:10px;color: white;">
       <i class="fa fa-shopping-cart"></i>
-    </div>
+    </div> -->
     <span style="color: white;font-size:12px;"> Cart </span>
   </div>
   <div class="col-xs-2  text-center" ng-click="$state.go('account.orders')" ng-class="{activeTopTabAcnt: $state.is('account.orders')}" style="cursor:pointer;">
-    <div class="row" style="padding-bottom:10px;color: white;">
+    <!-- <div class="row" style="padding-bottom:10px;color: white;">
       <i class="fa fa-truck"></i>
-    </div>
+    </div> -->
     <span style="color: white; font-size:13px;"> Orders </span>
   </div>
   <div class="col-xs-2  text-center" ng-click="$state.go('account.settings')" ng-class="{activeTopTabAcnt: $state.is('account.settings')}" style="cursor:pointer;">
-    <div class="row" style="padding-bottom:10px;color: white;">
+    <!-- <div class="row" style="padding-bottom:10px;color: white;">
       <i class="fa fa-wrench"></i>
-    </div>
+    </div> -->
     <span style="color: white; font-size:13px;"> Settings </span>
   </div>
   <div class="col-xs-2  text-center" ng-click="$state.go('account.support')" ng-class="{activeTopTabAcnt: $state.is('account.support')}" style="cursor:pointer;">
-    <div class="row" style="padding-bottom:10px;color: white;">
+    <!-- <div class="row" style="padding-bottom:10px;color: white;">
       <i class="fa fa-phone"></i>
-    </div>
+    </div> -->
     <span style="color: white; font-size:13px;"> Support </span>
   </div>
   <div class="col-xs-2  text-center" ng-click="$state.go('account.saved')" ng-class="{activeTopTabAcnt: $state.is('account.saved')}" style="cursor:pointer;">
-    <div class="row" style="padding-bottom:10px;color: white;">
+    <!-- <div class="row" style="padding-bottom:10px;color: white;">
       <i class="fa fa-heart"></i>
-    </div>
+    </div> -->
     <span style="color: white; font-size:13px;"> Saved </span>
   </div>
 </div>
