--- a/static_shared/ngTemplates/sideMenu.html
+++ b/static_shared/ngTemplates/sideMenu.html
@@ -7,7 +7,7 @@
       </div>
     </div>
   </div>
-  <div ng-if="!sideMenuVisibility" class="row" style="{{mobileView ? ';':'width:30%;'}};padding:15px;text-align:center">
+  <div ng-if="!sideMenuVisibility" class="row" style="{{mobileView ? ';':';'}};padding:15px;text-align:center">
     <img ng-src="{{user.pk | getDP}}" class="img img-circle" style="width:50px;float: none;">
   </div>
   <div class="row" style="{{sideMenuVisibility ? 'border-bottom:solid 2px #eeeeee;':''}}; margin:0px;">
