--- a/support/static/ngTemplates/app.qualityCheck.html
+++ b/support/static/ngTemplates/app.qualityCheck.html
@@ -151,10 +151,10 @@
               No More Data
             </div>
 
-            <div ng-if="reviewData.length>14||onceClicked" ng-show="!loadingData" class="col-sm-12" style="text-align:center">
+            <!-- <div ng-if="reviewData.length>14||onceClicked" ng-show="!loadingData" class="col-sm-12" style="text-align:center">
               <button style="background-color:#286090;padding:5px;color:white" ng-click="goBack()" ng-if="onceClicked">Go Back</button>
               <button style="background-color:#286090;padding:5px;color:white" ng-click="loadMore()" ng-if="!myDialouge">Load More</button>
-            </div>
+            </div> -->
 
           </div>
         </div>
@@ -244,10 +244,10 @@
               No More Data
             </div>
 
-            <div ng-if="archivedData.length>14||archievedOnceClicked" ng-show="loadingDataForArc" class="col-sm-12" style="text-align:center">
+            <!-- <div ng-if="archivedData.length>14||archievedOnceClicked" ng-show="loadingDataForArc" class="col-sm-12" style="text-align:center">
               <button style="background-color:#286090;padding:5px;color:white" ng-click="goBackArchived()" ng-if="archievedOnceClicked">Go Back</button>
               <button style="background-color:#286090;padding:5px;color:white" ng-click="loadMoreArchived()" ng-if="!archievedMyDialouge">Load More</button>
-            </div>
+            </div> -->
           </div>
         </div>
       </uib-tab>
