--- a/performance/static/ngTemplates/app.performance.dash.html
+++ b/performance/static/ngTemplates/app.performance.dash.html
@@ -46,8 +46,11 @@
         <div class="header">
           <p>Inventory Finished Goods by Loaction</p>
         </div>
-        <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels" chart-dataset-override='dataset'>
+        <canvas id="myChart" height="140px" style="margin-bottom: 15px;">
         </canvas>
+        <div style="position: absolute;left: 110px;right: 0;bottom: 35%;font-size: 2em;font-weight:bold;color:#4C565F;">
+          23L
+        </div>
       </div>
     </div>
 
