--- a/finance/static/ngTemplates/app.finance.vendor.create.form.html
+++ b/finance/static/ngTemplates/app.finance.vendor.create.form.html
@@ -2,7 +2,7 @@
   <h3><strong>Create Vendor</strong></h3>
 </div>
 <div class="modal-body container-fluid">
-  <h4>Vendor Details (Optional)</h4>
+  <!-- <h4>Vendor Details (Optional)</h4> -->
   <div class="form-group">
     <label>Company</label>
     <input type="text " class="form-control" ng-model="form.service">
