--- a/finance/static/ngTemplates/app.finance.vendor.form.html
+++ b/finance/static/ngTemplates/app.finance.vendor.form.html
@@ -34,11 +34,60 @@
       <label>Contract Doc.</label>
       <input type="file" file-model="form.contentDocs">
     </div>
-    <div class="btn-group pull-right">
-      <button ng-if="mode=='new'" type="button" class="btn btn-default" ng-click="resetForm()">
+    <div class="btn-group pull-right"ng-if="mode=='new'">
+      <button type="button" class="btn btn-default" ng-click="resetForm()">
         Reset
       </button>
       <button type="button" class="btn btn-primary pull-right" ng-click="createVendor()">Save</button>
     </div>
   </div>
+  <div class="col-md-6" ng-if="mode=='edit'">
+    <div class="form-group">
+      <label>Address</label>
+      <input placeholder="Street" type="text " class="form-control" ng-model="form.service.address.street">
+      <div class="row" style="margin-top:5px;">
+        <div class=" col-md-6">
+          <input placeholder="City" type="text " class="form-control" ng-model="form.service.address.city">
+        </div>
+        <div class="col-md-6">
+          <input placeholder="State" type="text " class="form-control" ng-model="form.service.address.state">
+        </div>
+      </div>
+      <div class="row" style="margin-top:5px;">
+        <div class=" col-md-6">
+          <input placeholder="pincode" type="text " class="form-control" ng-model="form.service.address.pincode">
+        </div>
+        <div class="col-md-6">
+          <input placeholder="Country" type="text " class="form-control" ng-model="form.service.address.country">
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label>Telephone</label>
+      <input type="text " class="form-control" ng-model="form.service.telephone">
+    </div>
+    <div class="form-group">
+      <label>CIN</label>
+      <input type="text " class="form-control" ng-model="form.service.cin">
+    </div>
+    <div class="form-group">
+      <label>TIN</label>
+      <input type="text " class="form-control" ng-model="form.service.tin">
+    </div>
+    <div class="form-group">
+      <label>Logo</label>
+      <input type="text " class="form-control" ng-model="form.service.logo">
+    </div>
+    <div class="form-group">
+      <label>web</label>
+      <input type="text " class="form-control" ng-model="form.service.web">
+    </div>
+    <!-- <button type="button" class="btn btn-primary pull-right col-md-3 pull-right" ng-click="createCompany()">Save company details</button> -->
+    <button type="button" class="btn btn-primary pull-right" ng-click="updateVendor()">Update</button>
+  </div>
+  <!-- <div class="btn-group pull-right">
+    <button ng-if="mode=='new'" type="button" class="btn btn-default" ng-click="resetForm()">
+      Reset
+    </button>
+  </div> -->
 </div>
