--- a/performance/static/ngTemplates/app.performance.dash.html
+++ b/performance/static/ngTemplates/app.performance.dash.html
@@ -5,7 +5,7 @@
     <i class="fa fa-search-plus fa-5x"></i>
     <i class="fa fa-wrench fa-5x "></i>
     <br>
-    <h3 class="text-muted" style="text-align:center;"> Dashboard for Performance</h3>
+    <h3 class="text-muted" style="text-align:center;"> Dashboard for Payroll</h3>
   </p>
 </div>
 </div>
