--- a/performance/static/ngTemplates/app.performence.feedback.html
+++ b/performance/static/ngTemplates/app.performence.feedback.html
@@ -5,7 +5,7 @@
     <i class="fa fa-search-plus fa-5x"></i>
     <i class="fa fa-wrench fa-5x "></i>
     <br>
-    <h3 class="text-muted" style="text-align:center;"> Dashboard for Feedback</h3>
+    <h3 class="text-muted" style="text-align:center;"> Dashboard for feedback</h3>
   </p>
 </div>
 </div>
