--- a/projectManagement/static/ngTemplates/projectManagement.dash.html
+++ b/projectManagement/static/ngTemplates/projectManagement.dash.html
@@ -1,25 +1,38 @@
-<div class="" style="min-height:93vh;position:relative;">
+<div class="" style="height:93vh;position:relative;">
+  <div class="container-fluid" style="padding:20px;">
+    <breadcrumb></breadcrumb>
+    <div class="container-fluid">
+      <div class="col-md-12">
+        <div class="col-md-6">
+          <div class="container-fluid" style="border:1px solid #dedcdc;padding-bottom:10px;">
+            <h4>Expense divsion</h4>
+            <canvas id="expense-doughnut-chart" width="500"height="250"></canvas>
+          </div>
+        </div>
 
-  <p style="text-align:center;padding-top:200px;">
-    <i class="fa fa-search-plus fa-5x"></i>
-    <i class="fa fa-wrench fa-5x "></i>
-    <br>
-    <h3 class="text-muted" style="text-align:center;"> Dashboard for project management</h3>
-  </p>
-    <!-- <div class="col-md-11">
+        <div class="col-md-6">
+          <div class="container-fluid" style="border:1px solid #dedcdc;">
+            <h4>Variance By headcount,Expense Category,divsion</h4>
+            <canvas id="variance-bubble-chart" width="500" height="250"></canvas>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col-md-1" style="position:absolute; height:100%;top:0px;right:0px;margin:0px;padding:0px;background-color:var(--themeMain);color:white;">
-        <ul class="nav nav-sidebar-inverse" style="width:100%;">
-          <li class="active">
-            <a class="text-center">
-                <i class="fa fa-plus fa-3x"></i> <br> New
-            </a>
-          </li>
-          <li>
-            <a class="text-center">
-                <i class="fa fa-bar-chart-o fa-3x"></i> Stats
-            </a>
-          </li>
-        </ul>
-    </div> -->
+    <div class="container-fluid"style="padding-top:20px;">
+      <div class="col-md-12">
+        <div class="col-md-6">
+          <div class="container-fluid"  style="border:1px solid #dedcdc">
+            <h4>YoY Variance Trend</h4>
+            <canvas id="yoy-mixed-chart" width="500" height="250"></canvas>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="container-fluid"  style="border:1px solid #dedcdc">
+            <h4>YoY Variance by Expense Category</h4>
+            <canvas id="expense-bar-chart" width="500" height="250"></canvas>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
