--- a/performance/static/ngTemplates/app.performance.dash.html
+++ b/performance/static/ngTemplates/app.performance.dash.html
@@ -63,14 +63,15 @@
       </div>
       <div class="col-md-4 firstrow">
         <div class="header">
-          <p>Jobs by Status</p>
+          <p>Container Loactions</p>
         </div>
-        <canvas id="barchart"></canvas>
+        <canvas id="myChart1" height="140px" style="margin-bottom: 15px;">
       </div>
       <div class="col-md-4 firstrow">
         <div class="header">
-          <p>Container Loactions</p>
+          <p>Jobs by Status</p>
         </div>
+        <canvas id="barchart"></canvas>
       </div>
     </div>
 
