--- a/support/static/ngTemplates/app.settings.newProduct.html
+++ b/support/static/ngTemplates/app.settings.newProduct.html
@@ -37,11 +37,14 @@
         <label>Custom %</label>
         <input type="text" ng-model="data.custom" class="form-control" placeholder="Custom">
       </div>
-      <div class="btn-group pull-right">
-        <button ng-if="mode=='new'" type="button" class="btn btn-default" ng-click="resetForm()">
+      <div class="btn-group pull-right" ng-if="mode=='new'">
+        <!-- <button  type="button" class="btn btn-default" ng-click="submitForm(type , 'reset' , data)">
           Reset
-        </button>
-        <button type="button" class="btn btn-primary pull-right" ng-click="save()">Save</button>
+        </button> -->
+        <button type="button" class="btn btn-primary" ng-click="submitForm( type , 'new' , data )"> Create </button>
+      </div>
+      <div class="btn-group pull-right" ng-if="mode=='edit'">
+        <button type="submit" class="btn btn-primary" ng-click="submitForm()"> Save </button>
       </div>
     </div>
   </div>
