--- a/support/static/ngTemplates/app.projects.service.view.html
+++ b/support/static/ngTemplates/app.projects.service.view.html
@@ -192,7 +192,7 @@
                   </div>
                   <div class="col-md-6 text-center">
                     <span ng-if="form.poNumber.length>0||form.projects.length>0||form.data.length>0"><a class="btn btn-primary" target="_blank" href="/api/support/POSlip/?project={{form.pk}}&poNumber={{form.poNumber}}&revision={{form.revision}}&typ=INR"><i
-                          class="fa fa-download"></i> Download PO in INR </a></span>
+                          class="fa fa-download"></i> Download landing Details </a></span>
                   </div>
                 </div><br>
                 <!-- <span ng-if="form.poNumber==null||form.poNumber.length==0" class="btn btn-primary" ng-click="showFlashError()"><i class="fa fa-download"></i> Download PO </span><br><br> -->
@@ -256,7 +256,7 @@
             <span> {{(form.packing * form.exRate).toFixed(2)}}</span>
           </div>
           <div class="col-md-2 text-center">
-            <span> {{(form.packing *100 / form.invoiceValue).toFixed(2)}} %</span>
+            <span> {{(form.packing / form.invoiceValue).toFixed(2)}} %</span>
           </div>
         </div>
         <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -271,7 +271,7 @@
             <!-- <input type="number" class="form-control text-center" ng-model="form.insuranceINR"> -->
           </div>
           <div class="col-md-2 text-center">
-            <span> {{(form.insurance*100/ form.invoiceValue).toFixed(2)}}% </span>
+            <span> {{(form.insurance/ form.invoiceValue).toFixed(2)}}% </span>
             <!-- <input type="number" class="form-control text-center" ng-model="form.insurancePer"> -->
           </div>
         </div>
@@ -287,7 +287,7 @@
             <!-- <input type="number" class="form-control text-center" ng-model="form.freightINR"> -->
           </div>
           <div class="col-md-2 text-center">
-            <span> {{(form.freight*100/ form.invoiceValue).toFixed(2)}} %</span>
+            <span> {{(form.freight/ form.invoiceValue).toFixed(2)}} %</span>
             <!-- <input type="number" class="form-control text-center" ng-model="form.freightPer"> -->
           </div>
         </div>
@@ -300,7 +300,7 @@
             <!-- <input type="number" class="form-control text-center" ng-model="form.assessableValue"> -->
           </div>
           <div class="col-md-3 text-center">
-            <span>{{(form.invoiceValue*form.exRate*(100+form.assessableValueFraction)/100).toFixed(2)}}</span>
+
           </div>
           <div class="col-md-2 text-center">
             <input type="number" class="form-control text-center" ng-model="form.assessableValue" ng-change="assemblyValChange()">
@@ -353,7 +353,7 @@
           </div>
           <div class="col-md-2 text-center">
             <!-- <input type="number" class="form-control text-center" ng-model="form.clearingCharges1Per"> -->
-            <span> {{(form.clearingCharges1*100/(form.invoiceValue* form.exRate)).toFixed(2)}} %</span>
+            <span> {{(form.clearingCharges1/(form.invoiceValue* form.exRate)).toFixed(2)}} %</span>
           </div>
         </div>
         <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -368,7 +368,7 @@
           </div>
           <div class="col-md-2 text-center">
             <!-- <input type="number" class="form-control text-center" ng-model="form.clearingCharges2Per"> -->
-            <span> {{(form.clearingCharges2*100/(form.invoiceValue * form.exRate)).toFixed(2)}} %</span>
+            <span> {{(form.clearingCharges2/(form.invoiceValue * form.exRate)).toFixed(2)}} %</span>
           </div>
         </div>
         <!-- <div class="row" style="padding-top:10px">
@@ -389,6 +389,7 @@
               <th>Products</th>
               <th>Price (CHF)</th>
               <th>Quantity</th>
+              <th>HSN</th>
               <th>Quote Price (CHF)</th>
               <th>Ex-Work Price (INR)</th>
               <th>Packing Cost</th>
@@ -412,6 +413,7 @@
               <td>{{v.products.description_1}}<span ng-if="v.products.description_2"> &nbsp;({{v.products.description_2}})</span></td>
               <td>{{v.price}}</td>
               <td><input type="text" class="form-control-pos text-center" ng-model="v.quantity1"></td>
+              <td>{{v.customs_no}}</td>
               <td>{{v.quotePrice}}</td>
               <td>{{v.inrPrice}}</td>
               <td>{{v.packing}}</td>
@@ -420,11 +422,12 @@
               <td>{{v.cif}}</td>
               <td>{{(v.cif*v.quantity1).toFixed(2)}}</td>
               <!-- <td><select ng-model ="v.custom"><option value="7.5">7.5</option></select></td> -->
-              <td>{{v.custom}}%</td>
+
+              <td><input type="text" class="form-control-pos text-center" ng-model="v.custom"></td>
               <td>{{v.customVal}} </td>
               <td>{{v.socialVal}}</td>
-              <td>18% </td>
-              <td>{{((v.cif*18)/100).toFixed(2)}} </td>
+              <td><input type="text" class="form-control-pos text-center" ng-model="v.gst"></td>
+              <td>{{v.gstVal}} </td>
               <td>{{v.charge1}} </td>
               <td>{{v.charge2}} </td>
               <td>{{v.landed_price}}</td>
@@ -441,6 +444,7 @@
               <td>
                 <input type="text" class="form-control-pos text-center" ng-model="item.quantity1">
               </td>
+              <td>{{item.customs_no}}</td>
               <td>{{item.quotePrice}}</td>
               <td>{{item.inrPrice}}</td>
               <td>{{item.packing}}</td>
@@ -449,16 +453,17 @@
               <td>{{item.cif}}</td>
               <td>{{(item.cif*item.quantity1).toFixed(2)}}</td>
               <!-- <td><select ng-model ="v.custom"><option value="7.5">7.5</option></select></td> -->
-              <td>{{item.custom}}%</td>
+              <td><input type="text" class="form-control-pos text-center" ng-model="item.custom"></td>
+              <!-- <td>{{item.custom}}%</td> -->
               <td>{{item.customVal}} </td>
               <td>{{item.socialVal}}</td>
-              <td>18% </td>
-              <td>{{((item.cif*18)/100).toFixed(2)}} </td>
+              <td><input type="text" class="form-control-pos text-center" ng-model="item.gst"></td>
+              <td>{{item.gstVal}} </td>
               <td>{{item.charge1}} </td>
               <td>{{item.charge2}} </td>
               <td>{{item.landed_price}}</td>
               <td>
-                <button type="button" class="btn btn-danger btn-sm" ng-click="deleteTable(item.part_no,$index)"> <i class="fa fa-trash"></i> </button>
+                <button type="button" class="btn btn-danger btn-sm" ng-click="deleteTable(item.listPk,$index)"> <i class="fa fa-trash"></i> </button>
               </td>
             </tr>
             <tr>
@@ -475,10 +480,10 @@
       </div>
     </div>
   </div>
-</div>
-<div ng-controller="businessManagement.projects.approval.view">
+<!-- </div>
+<div ng-controller="businessManagement.projects.service.view"> -->
   <div class="container-fluid" style="padding:20px;" ng-if="form.status=='sent_for_approval'">
-    {{form.status}}
+
     <div class="col-md-3" style="border-right:solid 2px #eeeeee;min-height:80vh;">
       <div class="row">
         <div class="col-md-12">
@@ -652,7 +657,7 @@
                 </div>
                 <div class="col-md-6 text-center">
                   <span ng-if="form.poNumber.length>0||form.projects.length>0||form.data.length>0"><a class="btn btn-primary" target="_blank" href="/api/support/POSlip/?project={{form.pk}}&poNumber={{form.poNumber}}&revision={{form.revision}}&typ=INR"><i
-                        class="fa fa-download"></i> Download PO in INR </a></span>
+                        class="fa fa-download"></i> Download landing Details </a></span>
                 </div>
               </div><br>
               <div class="row">
@@ -712,7 +717,7 @@
           <span> {{(form.packing * form.exRate).toFixed(2)}}</span>
         </div>
         <div class="col-md-2 text-center">
-          <span> {{(form.packing *100 / form.invoiceValue).toFixed(2)}} %</span>
+          <span> {{(form.packing  / form.invoiceValue).toFixed(2)}} %</span>
         </div>
       </div>
       <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -726,7 +731,7 @@
           <span> {{(form.insurance * form.exRate).toFixed(2)}}</span>
         </div>
         <div class="col-md-2 text-center">
-          <span> {{(form.insurance*100/ form.invoiceValue).toFixed(2)}}% </span>
+          <span> {{(form.insurance/ form.invoiceValue).toFixed(2)}}% </span>
         </div>
       </div>
       <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -740,7 +745,7 @@
           <span> {{(form.freight * form.exRate).toFixed(2)}}</span>
         </div>
         <div class="col-md-2 text-center">
-          <span> {{(form.freight*100/ form.invoiceValue).toFixed(2)}} %</span>
+          <span> {{(form.freight/ form.invoiceValue).toFixed(2)}} %</span>
         </div>
       </div>
       <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -750,7 +755,7 @@
         <div class="col-md-3 text-center">
         </div>
         <div class="col-md-3 text-center">
-          <span>{{(form.invoiceValue*form.exRate*(100+form.assessableValueFraction)/100).toFixed(2)}}</span>
+
         </div>
         <div class="col-md-2 text-center">
           <span>{{form.assessableValue}}</span>
@@ -816,6 +821,7 @@
               <th>Product</th>
               <th>Part No</th>
               <th> Quantity</th>
+              <th>HSN</th>
               <th>Price</th>
               <th>Quote Price (CHF)</th>
               <th>Ex-Work Price (INR)</th>
@@ -839,6 +845,7 @@
               <td>{{v.products.description_1}}<span ng-if="v.products.description_2"> &nbsp({{v.products.description_2}})</span></td>
               <td>{{v.products.part_no}}</td>
               <td>{{v.quantity1}}</td>
+              <td>{{v.customs_no}}</td>
               <td>{{v.price}}</td>
               <td>{{v.quotePrice}}</td>
               <td>{{v.inrPrice}}</td>
@@ -850,8 +857,8 @@
               <td>{{v.custom}}%</td>
               <td>{{v.customVal}} </td>
               <td>{{v.socialVal}}</td>
-              <td>18% </td>
-              <td>{{((v.cif*18)/100).toFixed(2)}} </td>
+              <td>{{v.gst}} </td>
+              <td>{{v.gstVal}} </td>
               <td>{{v.charge1}} </td>
               <td>{{v.charge2}} </td>
               <td>{{v.landed_price}}</td>
@@ -1052,7 +1059,7 @@
                 </div>
                 <div class="col-md-6 text-center">
                   <span ng-if="form.poNumber.length>0||form.projects.length>0||form.data.length>0"><a class="btn btn-primary" target="_blank" href="/api/support/POSlip/?project={{form.pk}}&poNumber={{form.poNumber}}&revision={{form.revision}}&typ=INR"><i
-                        class="fa fa-download"></i> Download PO in INR </a></span>
+                        class="fa fa-download"></i> Download landing Details </a></span>
                 </div>
               </div><br>
               <div class="row">
@@ -1115,7 +1122,7 @@
           <span> {{(form.packing * form.exRate).toFixed(2)}}</span>
         </div>
         <div class="col-md-2 text-center">
-          <span> {{(form.packing *100 / form.invoiceValue).toFixed(2)}} %</span>
+          <span> {{(form.packing / form.invoiceValue).toFixed(2)}} %</span>
         </div>
       </div>
       <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -1129,7 +1136,7 @@
           <span> {{(form.insurance * form.exRate).toFixed(2)}}</span>
         </div>
         <div class="col-md-2 text-center">
-          <span> {{(form.insurance*100/ form.invoiceValue).toFixed(2)}}% </span>
+          <span> {{(form.insurance/ form.invoiceValue).toFixed(2)}}% </span>
         </div>
       </div>
       <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -1143,7 +1150,7 @@
           <span> {{(form.freight * form.exRate).toFixed(2)}}</span>
         </div>
         <div class="col-md-2 text-center">
-          <span> {{(form.freight*100/ form.invoiceValue).toFixed(2)}} %</span>
+          <span> {{(form.freight/ form.invoiceValue).toFixed(2)}} %</span>
         </div>
       </div>
       <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -1219,6 +1226,7 @@
           <th>Product</th>
           <th>Part No</th>
           <th>Quantity</th>
+          <th>HSN</th>
           <th>Price</th>
           <th>Quantity Received</th>
           <th>Quote Price (CHF)</th>
@@ -1242,6 +1250,7 @@
           <td>{{v.products.description_1}}<span ng-if="v.products.description_2"> &nbsp({{v.products.description_2}})</span></td>
           <td>{{v.products.part_no}}</td>
           <td>{{v.quantity1}}</td>
+          <td>{{v.customs_no}}</td>
           <td>{{v.price.toFixed(2)}}</td>
           <td><input step=1 class="form-control-pos" ng-model="v.quantity2"></td>
           <td>{{v.quotePrice}}</td>
@@ -1254,8 +1263,8 @@
           <td>{{v.custom}}%</td>
           <td>{{v.customVal}} </td>
           <td>{{v.socialVal}}</td>
-          <td>18% </td>
-          <td>{{((v.cif*18)/100).toFixed(2)}} </td>
+          <td>{{v.gst}} </td>
+          <td>{{v.gstVal}} </td>
           <td>{{v.charge1}} </td>
           <td>{{v.charge2}} </td>
           <td>{{v.landed_price}}</td>
@@ -1444,7 +1453,7 @@
                     </div>
                     <div class="col-md-6 text-center">
                       <span ng-if="form.poNumber.length>0||form.projects.length>0||form.data.length>0"><a class="btn btn-primary" target="_blank" href="/api/support/POSlip/?project={{form.pk}}&poNumber={{form.poNumber}}&revision={{form.revision}}&typ=INR"><i
-                            class="fa fa-download"></i> Download PO in INR </a></span>
+                            class="fa fa-download"></i> Download landing Details </a></span>
                     </div>
                   </div><br>
                   <div class="row">
@@ -1489,6 +1498,7 @@
             <th>Part No</th>
             <th>Products</th>
             <th> Quantity</th>
+            <th>HSN</th>
             <th>Price</th>
             <th>Total</th>
           </tr>
@@ -1497,6 +1507,7 @@
             <td>{{v.products.part_no}}</td>
             <td>{{v.products.description_1}}<span ng-if="v.products.description_2"> ({{v.products.description_2}})</span></td>
             <td> {{v.quantity1}}</td>
+            <td>{{v.customs_no}}</td>
             <td>{{v.price.toFixed(2)}}</td>
             <td>{{(v.quantity1*v.price).toFixed(2)}}</td>
           </tr>
@@ -1583,7 +1594,7 @@
                   <span> {{(form.packing * form.exRate).toFixed(2)}}</span>
                 </div>
                 <div class="col-md-2 text-center">
-                  <span> {{(form.packing *100 / form.invoiceValue).toFixed(2)}} %</span>
+                  <span> {{(form.packing / form.invoiceValue).toFixed(2)}} %</span>
                 </div>
               </div>
               <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -1597,7 +1608,7 @@
                   <span> {{(form.insurance * form.exRate).toFixed(2)}}</span>
                 </div>
                 <div class="col-md-2 text-center">
-                  <span> {{(form.insurance*100/ form.invoiceValue).toFixed(2)}}% </span>
+                  <span> {{(form.insurance/ form.invoiceValue).toFixed(2)}}% </span>
                 </div>
               </div>
               <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
@@ -1611,7 +1622,7 @@
                   <span> {{(form.freight * form.exRate).toFixed(2)}}</span>
                 </div>
                 <div class="col-md-2 text-center">
-                  <span> {{(form.freight*100/ form.invoiceValue).toFixed(2)}} %</span>
+                  <span> {{(form.freight/ form.invoiceValue).toFixed(2)}} %</span>
                 </div>
               </div>
               <div class="row" style="padding-top:10px;border-bottom:1px solid #eeeeee">
