--- a/support/static/ngTemplates/app.settings.html
+++ b/support/static/ngTemplates/app.settings.html
@@ -9,7 +9,7 @@
           <i class="fa fa-list-ul"></i>
         </uib-tab-heading>
         <div class="container-fluid">
-          <generic-Table data="data.tableData" config-Obj="{{config}}" callback-Fn="tableAction"></generic-Table>
+          <generic-Table callback-Fn = "tableAction" data="tableData" config-Obj="{{config}}"></generic-Table>
         </div>
       </uib-tab>
 
