--- a/support/static/ngTemplates/app.settings.newProduct.html
+++ b/support/static/ngTemplates/app.settings.newProduct.html
@@ -19,23 +19,23 @@
       </div>
       <div class="form-group">
         <label>Weight</label>
-        <input ng-model="data.weight" type="text" class="form-control" placeholder="Weight">
+        <input ng-model="data.weight" type="number" class="form-control" placeholder="Weight">
       </div>
       <div class="form-group">
         <label>Price</label>
-        <input type="text" ng-model="data.price" class="form-control" placeholder="Price">
+        <input type="number" ng-model="data.price" class="form-control" placeholder="Price">
       </div>
       <div class="form-group">
         <label>Customs No</label>
-        <input type="text" ng-model="data.customs_no" class="form-control" placeholder="Customs No">
+        <input type="number" ng-model="data.customs_no" class="form-control" placeholder="Customs No">
       </div>
       <div class="form-group">
         <label>GST %</label>
-        <input type="text" ng-model="data.gst" class="form-control" placeholder="GST">
+        <input type="number" ng-model="data.gst" class="form-control" placeholder="GST">
       </div>
       <div class="form-group">
         <label>Custom %</label>
-        <input type="text" ng-model="data.custom" class="form-control" placeholder="Custom">
+        <input type="number" ng-model="data.custom" class="form-control" placeholder="Custom">
       </div>
       <div class="btn-group pull-right" ng-if="mode=='new'">
         <!-- <button  type="button" class="btn btn-default" ng-click="submitForm(type , 'reset' , data)">
